# wfmash

./: .gitignore  .gitmodules  11-way  BETTER_SOLUTION.md  BUILD_VENDOR.md  CITATION.cff  CLAUDE.md  CLAUDE.md.1  CLEAN_FIX.md  CLEAN_SOLUTION_PLAN.md  CMakeLists.txt  CTestCustom.cmake  ELEGANT_SOLUTION.md  FUNDAMENTAL_FIX_PLAN.md  L1_HITS_UPDATE.md  LICENSE  MAPPING_TRUNCATION_ANALYSIS.md  MAPPING_TRUNCATION_STATUS.md  MEMORY_TESTING_REPORT.md  Makefile.in  README.md  REAL_FIX.md  SCAFFOLD_FILTER_UPDATE.md  SCAFFOLD_LOGGING_SIMPLIFICATION.md  STAMPEDE3_FIX_SUMMARY.md  TASKFLOW_FIX_ANALYSIS.md  TASKFLOW_NESTED_SUBFLOW_FIX.md  WHY_SHUO_WORKS.md  baseline.current.paf  baseline.full.paf  baseline.merged.paf  baseline.raw.new.paf  baseline.raw.paf  cerevisiae.chrV.fa.gz.fai  cerevisiae.chrV.fa.gz.gzi  current.compact.fixed.paf  current.compact.paf  current.final.paf  current.final2.paf  current.full.paf  (+81 more)
.github/workflows/: test_on_push.yml
data/: LPA.subset.fa  LPA.subset.fa.gz.fai  LPA.subset.fa.gz.gzi  chm13#chr20_36805939-36807738.fa  chm13+grch38.chr20.fa.gz.fai  chm13+grch38.chr20.fa.gz.gzi  reads.255bps.fa.gz.fai  reads.500bps.fa.gz.fai  reads.500bps.fa.gz.gzi  reference.fa.gz.fai  reference.fa.gz.gzi
doc/: performance-tuning.md
docs/: CLAUDE_NOTES.md  MAP_COMPACT.md  MEMORY_OPTIMIZATION_SUMMARY.md  MINIMAL.md  REFACTORING_SUMMARY.md  SCAFFOLD.md  TESTING.md  UNION_FIND_MERGE_ALGORITHM.md  mapping.tex  mashmap_algorithm.tex
publication/evaluation/: 00_dataset.sh  01_alignment.sh  sam2bam.sh
scripts/: all2all_jobs.py  build-fully-static.sh  build-vendor-everything.sh  fasta+paf2vcf.sh  generate_git_version.sh  make_align_test_case.sh  make_source_targball.sh  paf+fasta2seq.sh  paf2dotplot  run_all_tests.sh  split_approx_mappings_in_chunks.py  test.sh  wfplot.R
scripts/WFLIGNvsWFA/: README.md  compare_alignments.py  output2paf.py  paf+fasta2seq+fasta.sh
src/: version.cpp  version.hpp  wfmash_git_version.hpp
src/align/: align.cpp
src/align/include/: align_parameters.hpp  align_types.hpp  computeAlignments.hpp  parseCmdArgs.hpp
src/common/: ALeS.hpp  dset64-gccAtomic.hpp  dset64.hpp  faigz.h  indicators.hpp  progress.hpp  seqiter.hpp  thread_safe_faidx.hpp  union_find.hpp  utils.cpp  utils.hpp
src/common/WFA/: Makefile
src/common/art_map/: map.h  set.h
src/common/art_map/detail/: art_container.h  art_container_impl.h  art_deleter.h  art_node_base.h  art_nodes.h  basic_leaf.h  bitwise_key.h  container_traits.h  dump_byte.h  node_type.h  tagged_ptr.h  tree_iterator.h  tzcnt.h
src/common/atomic_queue/: atomic_queue.h
src/common/ntHash/: README.md  ntHashIterator.hpp  nthash.hpp  ssHashIterator.hpp  stHashIterator.hpp
src/common/ntHash/unittest/: UnitTests.cpp
src/common/wflign/: .gitignore  CMakeLists.txt  README.md
src/common/wflign/src/: alignment_printer.hpp  atomic_image.cpp  atomic_image.hpp  dna.hpp  main.cpp  rkmh.cpp  rkmh.hpp  seqiter.hpp  wfa_edit_callback.cpp  wfa_edit_callback.hpp  wfav2_stub.cpp  wflign.cpp  wflign.hpp  wflign_alignment.cpp  wflign_alignment.hpp  wflign_cigar_utils.hpp  wflign_edlib.cpp  wflign_edlib.hpp  wflign_git_version.hpp  wflign_patch.cpp  wflign_patch.hpp  wflign_swizzle.cpp  wflign_swizzle.hpp  wflign_wfa.cpp  wflign_wfa.hpp
src/interface/: main.cpp  memory_handler.hpp  memory_monitor.hpp  parse_args.hpp  temp_file.hpp
src/map/: mash_map.cpp
src/map/include/: SequenceIdManager.hpp  base_types.hpp  commonFunc.hpp  compressedMapping.hpp  computeMap.hpp  computeMap.hpp.backup  externalSeeder.hpp  filter.hpp  fragmentManager.hpp  lockFreeCompressedMapping.hpp  map_parameters.hpp  map_stats.hpp  mappingCore.hpp  mappingFilter.hpp  mappingOutput.hpp  parseCmdArgs.hpp  sequenceIds.hpp  slidingMap.hpp  streamingMinHash.hpp  winSketch.hpp
src/yeet/: yeet_main.cpp
src/yeet/include/: parse_args.hpp  temp_file.hpp
test/data/regression/: aligned.paf.output  all2all-300.paf.output  reads.255bps.paf  scerevisiae8.paf.output  wfmash-short-reads-500bps-to-SAM.output
